# FastAPI-Search-Engine

./: .gitignore  README.md  pyproject.toml  work_log
src/core/models/: product.py
src/core/services/classes/: search_service.py
src/core/services/interfaces/: engine_chooserI.py  file_readerI.py  products_dbI.py  search_engineI.py  search_serviceI.py
src/infra/API/: search.py
src/infra/db/: inmem_db.py  sqllite_db.py
src/infra/file_readers/: json_reader.py
src/infra/search_engines/: engine_chooser.py  fuzzy_search.py  hybrid_search.py  inmemory_engine.py  vectorsearch_engine.py
src/runner/: main.py  setup.py
tests/: test_inmem_db.py  test_json_reader.py  test_search_service.py  test_vectorsearch_engine.py
